add READ method
