# docs/swagger.json
@@ -17,7 +17,7 @@
     "host": "127.0.0.1:3005/api/v1",
     "basePath": "/",
     "paths": {
-        "/accounts/{id}": {
+        "/account/{id}": {
             "get": {
                 "description": "get string by ID",
                 "consumes": [
@@ -30,8 +30,8 @@
                 "operationId": "get-string-by-int",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "Account ID",
+                        "type": "string",
+                        "description": "User.ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -39,28 +39,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.Account"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.HTTPError"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.HTTPError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.HTTPError"
-                        }
+                        "description": ""
                     }
                 }
             }
@@ -95,17 +74,6 @@
         }
     },
     "definitions": {
-        "handlers.Account": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "string"
-                }
-            }
-        },
-        "handlers.HTTPError": {
-            "type": "object"
-        },
         "serializers.User": {
             "type": "object",
             "required": [
